# BookLibrary

./: .gitignore  docker-compose.yml  pyproject.toml  readme.md
alembic_service/: .dockerignore  Dockerfile  config.py  req.txt
alembic_service/migrations/: env.py
alembic_service/migrations/versions/: 7615c3157d55_dev_add_columns_in_books.py  98724dfe8121_dev_add_unique_in_books.py  a2242db2956e_def_add_books.py  af755ba6da38_dev_rename_column_cover_in_books.py
src/backend/: Dockerfile  main.py  req.txt
src/backend/common/: dependencies.py
src/backend/common/Core/: .env.example  config.py
src/backend/common/DB/: Database.py  db.py
src/backend/common/Models/: Base.py  Books.py  __init__.py
src/backend/common/api_clients/: BaseApiClient.py  OpenLibraryClient.py
src/backend/common/crud/: BookRepository.py  CrudDB.py
src/backend/common/exceptions/: exceptions.py  handlers.py
src/backend/common/logging/: log_funces.py  logger.py
src/backend/library_catalog/app/: LibraryCatalogRouter.py  router.py
src/backend/library_catalog/schemas/: schemas.py
src/backend/library_catalog/services/: LibraryCatalogService.py
